--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mui/material": "^5.15.17",
     "@mui/styled-engine": "^5.15.14",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
